--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,8 @@
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
       <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
-      <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ $data := getJSON "/package.json" }}{{ $data.version }}</a></p>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.projectRepo }}/releases" role="button">Downloads</a>
+      <p class="meta">Open-source LGPLv3 Licensed. <a href="{{ .Site.Params.projectRepo }}#license">Why?</a></p>
     </div>
   </div>
 </section>
@@ -18,30 +19,28 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
-        <h2 class="h4">Security aware</h2>
-        <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks-child-theme.netlify.app">Mozilla Observatory</a> out of the box. Easily change the default Security Headers to suit your needs.</p>
+        <h2 class="h4">Visual</h2>
+        <p>Views provide different visual representations of code, the main one being graph nodes.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Fast by default ⚡️</h2>
-        <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=59aafe464a68f8bc30b8e9a636d5b053">Google Lighthouse</a> by default. Doks removes unused css, prefetches links, and lazy loads images.</p>
+        <h2 class="h4">Compiled</h2>
+        <p>Builds using LLVM to platform specific assembly.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">SEO-ready</h2>
-        <p>Use sensible defaults for structured data, open graph, and Twitter cards. Or easily change the SEO settings to your liking.</p>
-      </div>
-    </div>
-    <div class="row justify-content-center text-center">
-      <div class="col-lg-5">
-        <h2 class="h4">Full text search</h2>
-        <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p>
+        <h2 class="h4">Fast</h2>
+        <p>Access to low level optimization.<br>Compiled to machine code.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Page layouts</h2>
-        <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit your needs.</p>
+        <h2 class="h4">Build Times</h2>
+        <p>Rift's architecture focuses on providing fast iteration and build times.</p>
       </div>
       <div class="col-lg-5">
-        <h2 class="h4">Dark mode</h2>
-        <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p>
+        <h2 class="h4">Safe by default</h2>
+        <p>Safe and simple language features by default, while exposing all tools needed for more complex code.</p>
+      </div>
+      <div class="col-lg-5">
+        <h2 class="h4">C & C++ Compatibility</h2>
+        <p>C and C++ code is understood as Rift code thanks to Clang.<br>No manual bindings.</p>
       </div>
     </div>
   </div>
