Added netlify cms

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
       <div class="card-body">
         <article>
           <h2 class="h3"><a class="stretched-link text-body" href="{{ .RelPermalink }}">{{ .Params.title }}</a></h2>
-          <p>{{ .Params.excerpt | safeHTML }}</p>
+          <p>{{ .Params.description | safeHTML }}</p>
           {{ partial "main/blog-meta.html" . -}}
         </article>
       </div>
