--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -8,4 +8,6 @@
   {{ block "head/seo" . }}{{ partial "head/seo.html" . }}{{ end }}
   {{ block "head/favicons" . }}{{ partial "head/favicons.html" . }}{{ end }}
   {{ block "head/custom-head" . }}{{ partial "head/custom-head.html" . }}{{ end }}
+
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
