--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,5 +28,17 @@
       <a id="toTop" href="#" class="btn btn-outline-primary rounded-circle ms-auto p-2"><span class="visually-hidden">Top</span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-up"><polyline points="18 15 12 9 6 15"></polyline></svg></a>
     </div>
     {{ end }}
+
+    <script>
+      if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", user => {
+          if (!user) {
+              window.netlifyIdentity.on("login", () => {
+                  document.location.href = "/admin/";
+              });
+          }
+          });
+      }
+      </script>
   </body>
 </html>
