--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -26,8 +26,8 @@ $pink-500: #d32e9d;
 
 $primary: #5a722a;
 
-$color-btn-bg: $pink-500;
-$color-btn-border: darken($pink-500, 5%);
+$color-btn-bg: $primary;
+$color-btn-border: darken($color-btn-bg, 5%);
 $color-btn-text: $white;
 
 // Options
