--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,8 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">Get Started</a>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.projectRepo }}/releases" role="button">Downloads</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}quick-start/introduction/" role="button">Get Started</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.projectRepo }}/releases" role="button">Releases</a>
       <p class="meta">Open-source LGPLv3 Licensed. <a href="{{ .Site.Params.projectRepo }}#license">Why?</a></p>
     </div>
   </div>
